fix: fix bug with horizontal scroll on main

--- a/src/app/components/Main/Main.css
+++ b/src/app/components/Main/Main.css
@@ -2,7 +2,7 @@
 
 .main-container{
     min-height: 90vh;
-    width: 100vw;
+    width: 99vw;
     background-color: #050214;
     font-family: 'Poppins', sans-serif;
     color: white;
@@ -15,7 +15,7 @@
 }
 
 .main-promocode{
-    margin: 10px;
+    padding: 10px;
     width: 100%;
     height: 30%;
     color: white;
@@ -24,9 +24,7 @@
 }
 
 .main-image{
-    width: 100%;
     min-height: 77vh;
-    height: 100%;
     background-image: url(./main-image.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -34,8 +32,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow-x: hidden;
     margin-bottom: 10px;
+    overflow-x: hidden;
+    max-width: 100vw;
+    width: 100%;
 }
 
 .image-details{
@@ -86,7 +86,7 @@
 .main-banner{
     background-color: #FFF;
     color: black;
-    width: 100vw;
+    width: 100%;
     height: 20px;
     text-align: center;
     font-size: 1em;
